@startuml
title Modelado de los Edificios
note "Inventario y Casillero se explican en sus respectivos UMLs" as N1
interface Unidad {
 + void:pasarTurno()
 + void:recibirDanio(int cantidad)
}


interface Construible {
+int turnosParaConstruir()
}

abstract class  EdificioConcreto{
# Vida: vida
# Casillero: casillero
# int: turnosParaConstruir
 -Inventario: inventario

+<u>EdificioConcreto(Casillero unCasillero, Inventario unInventario)
+ void: pasarTurno();
+ void: recibirDanio(Danio danio)
+ boolean: unidadEnConstruccion()
+ boolean: unidadEstaLista()
+  UnidadMovil: obtenerUnidad()
+ boolean: estaPorAca(List<Casillero> casilleros)
+ UnidadMovil: crearEvolucion(Inventario inventario)
+ Integer[]: obtenerPosicion()
+ {abstract} void ubicarEnInventario()
}



class EdificioEnConstruccion{
 /'- Unidad:vaASer'/
 - Casillero:casillero
 - int:turnosRestantes
 - boolean:destruido
 -Inventario: inventario
 -boolean: enInventario

 + <u>EdificioEnConstruccion(EdificioConcreto vaASer, Casillero casillero,Inventario inventario)
 + boolean:estaListo()
 + void:pasarTurno()
 + void:recibirDanio(Danio danio)
 + boolean: estaPorAca(List<Casillero> casilleros)
 +Integer[]: obtenerPosicion()
}

class EdificioZerg{
 + EdificioZerg(Casillero, Inventario, int vida)
 + void:pasarTurno()
}

class EdificioProtoss{
 + <u>EdificioProtoss(Casillero, Inventario, int vidaInicial, int escudoInicial)
 + void:pasarTurno()
}

abstract class Vida{
#int:vida

+<u>Vida(int vida)
+void: chequeoDeVida()
+boolean: quedaVida()
}



interface Superficie{
+ int danio(Danio danio)
+ boolean puedeVolar()
}


class UnidadMovil{}





EdificioConcreto "1" *-- "1"Vida


Construible <|.. EdificioConcreto
Unidad <|.. EdificioConcreto
Unidad <|.. EdificioEnConstruccion
EdificioConcreto <|-- EdificioZerg
EdificioConcreto <|-- EdificioProtoss
EdificioConcreto *-- Superficie
EdificioConcreto *-- "0..1"UnidadMovil
EdificioEnConstruccion "1" o-- "1" EdificioConcreto
@enduml